# Inboundsystem

./: .replit  database.json  main.py  pyproject.toml  replit.nix  requirements.txt
templates/: dashboard.html  index.html  login.html  report.html  task.html
