[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "pytesseract>=0.3.13",
    "replit>=4.1.2",
    "werkzeug>=3.1.3",
    "gunicorn>=20.1.0",  # <--- บรรทัดนี้สำคัญมาก!
]
    